# vapi-rs

./: .gitignore  Cargo.toml  Dockerfile.build  LICENSE-MIT  Makefile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  rust.yml
src/: error.rs  lib.rs  vapi.rs  vsl.rs  vsm.rs
src/vsl/: internal.rs  mod.rs  vsl_tags.rs
vapi/: Cargo.toml
vapi-logger/: Cargo.toml  README.md
vapi-logger/src/: config.rs  filter.rs  main.rs  metrics.rs  models.rs  output.rs  transform.rs
vapi-logger/src/parsers/: mod.rs
vapi-sys/: Cargo.toml  build.rs  wrapper.h
vapi/src/: error.rs  lib.rs  vapi.rs  vsm.rs
vapi/src/vsl/: internal.rs  mod.rs  models.rs  transform.rs  vsl.rs
vapi/src/vsl/parsers/: mod.rs
