[package]
name = "vapi-logger"
version = "0.2.0"
authors = ["Benn Sundsrud <benn.sundsrud@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vapi = { path = "../vapi" }
crossbeam = "0.8.1"
crossbeam-channel = "0.5.1"
tracing = "0.1.26"
tracing-subscriber = { version = "0.2.20", features = [ "tracing-log" ] }
serde = { version = "1.0.127", features = [ "derive" ] }
serde_json = "1.0.66"
nom = "6.2.1"
anyhow = "1.0.43"
lexical-core = "0.7.6"
structopt = { version = "0.3.23", default-features = false }
toml = "0.5.8"
