[package]
name = "vapi-logger"
version = "0.2.0"
authors = ["Benn Sundsrud <benn.sundsrud@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vapi = { path = "../vapi" }
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = [ "tracing-log", "env-filter"] }
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.145"
nom = "8.0.0"
anyhow = "1.0.100"
lexical-core = "1.0.6"
structopt = { version = "0.3.26", default-features = false }
toml = "0.9.8"
prometheus = "0.14.0"
lazy_static = "1.5.0"
tiny_http = "0.12.0"
